# RAG-local-search-assitant

./: .env-example  README.md  app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  main.py  md5.text  pyproject.toml  rag.py  sqlite_history_store.py  vector_stores.py
chat_history/: chat_history.db
chroma_db/: chroma.sqlite3
static/: index.html  upload.html
static/css/: style.css
static/js/: chat.js  upload.js
